# PostgresProjectExample

./: .gitignore  CMakeLists.txt  Database.cpp  Database.h  IImageData.h  MosaifyDatabase.cpp  MosaifyDatabase.h  README.md  main.cpp
.github/workflows/: macos-platform.yml  ubuntu-platform.yml
MosaifyDatabase/: CMakeLists.txt  IImageData.h  MosaifyDatabase.cpp  MosaifyDatabase.h
MosaifyDatabase/tests/: CMakeLists.txt  test_database_functions.cpp
schema/: schema.uml
tests/: CMakeLists.txt  test_database_functions.cpp
